--- a/portfolio/src/components/Footer/Footer.css
+++ b/portfolio/src/components/Footer/Footer.css
@@ -1,12 +1,17 @@
 .FooterContainer {
   width: 100%;
-  height: 10vh;
+  height: 1px;
   background-color: black;
   border-top: 1px solid #3a3939;
-  position: fixed;
+  position: relative;
   bottom: 0;
   left: 0;
-  width: 100%;
-  max-height: 200px;
-  overflow-y: auto;
+max-height: 160vh;
+color: white;
+position: absolute;
+}
+.FooterContainer p{
+  align-items: center;
+  margin-left: 47%;
+  margin-top: 30px;
 }
